--- a/Client/FYP_react_project/src/CSS/login.css
+++ b/Client/FYP_react_project/src/CSS/login.css
@@ -76,6 +76,9 @@ section a{
   border-radius: 30px;
   cursor: pointer;
   transition: .3s;
+  color: #fff;
+  font-weight: bold;
+  font-size: large;
 }
 .input-submit label{
   position: absolute;
@@ -91,12 +94,3 @@ section a{
   background: #000;
   transform: scale(1.05,1);
 }
-/* .sign-up-link{
-  text-align: center;
-  font-size: 15px;
-  margin-top: 20px;
-}
-.sign-up-link a{
-  color: #000;
-  font-weight: 600;
-} */
