14th April uplioad

--- a/Client/FYP_react_project/src/CSS/overview.css
+++ b/Client/FYP_react_project/src/CSS/overview.css
@@ -133,6 +133,15 @@ table, td {
   margin-bottom: 1px;
   font-size: 25px;
   text-transform: uppercase;
-  margin-left: 450px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.incidents{
+  text-transform: uppercase;
+  margin-top: 2px;
+  margin-bottom: 1px;
+  font-size: 25px;
+  text-align: center;
   font-weight: bold;
 }
