--- a/Client/FYP_react_project/src/CSS/overview.css
+++ b/Client/FYP_react_project/src/CSS/overview.css
@@ -47,9 +47,20 @@ table, td {
   background-color: #dc2626;
 }
 
+.update{
+  padding: 2px 4px;
+  font-size: 0.875rem;
+  font-weight: 600; 
+  background-color: #036ddf;
+  color: white;
+  border-radius: 5px;
+  transition: background-color 0.2s ease-in-out;
+  cursor: pointer;
+  margin-right: 5px;
+}
 
 .update:hover {
-  background-color: #0056b3; 
+  background-color: #00264e; 
 }
 
 .dropdown{
