--- a/Client/FYP_react_project/src/index.css
+++ b/Client/FYP_react_project/src/index.css
@@ -162,7 +162,7 @@ body {
   flex-direction: row;
   width: 100%;
   height: 100vh;
-  gap: 20px;
+  gap: 24px;
   margin: 20px 0;
   margin-right: 0;
 }
@@ -258,4 +258,38 @@ body {
 #bar-chart {
   width: 100%;
   height: 100%;
+}
+
+.negative-table {
+  border-collapse: collapse;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+}
+
+.negative-table th,
+.negative-table td {
+  padding: 6px 5px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.negative-table th {
+  background-color: #f8f8f8;
+  font-weight: bold;
+  color: #444;
+}
+/* 
+.negative-table tr:nth-child(even) {
+  background-color: #fafafa;
+}
+
+.negative-table tr:hover {
+  background-color: #f1f1f1;
+} */
+
+.negative-table-container {
+  max-height: 300px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
