--- a/Client/FYP_react_project/src/index.css
+++ b/Client/FYP_react_project/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 .aside {
-  background-color: #21232d;
+  background-color: green;
   height: 100%;
   width: 300px;
   color: #ffffff;
