--- a/Client/FYP_react_project/src/index.css
+++ b/Client/FYP_react_project/src/index.css
@@ -62,15 +62,20 @@ body {
 }
 
 .sidebar-brand {
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 700;
+  font-size: 40px;
+  font-weight: 950;
 }
 
 .material-icons-outlined {
   vertical-align: middle;
   line-height: 1px;
   cursor: pointer;
+}
+
+.school-icon{
+  font-size: 50px;
+  font-weight: 1000;
+  margin-left: 20px;
 }
 
 .sidebar-title {
@@ -85,7 +90,7 @@ body {
 
 .sidebar-list {
   padding: 0;
-  margin-top: 80px;
+  margin-top: 50px;
   text-decoration: none;
   list-style-type: none;
 }
